add_executable(frequency_counter frequency_counter.c)
target_link_libraries(frequency_counter PRIVATE st_sequential_search)

add_executable(st_binary_search_client st_binary_search_client.c)
target_link_libraries(st_binary_search_client PRIVATE st_binary_search comparators)

add_executable(st_binary_search_tree_client st_binary_search_tree_client.c)
target_link_libraries(st_binary_search_tree_client PRIVATE st_binary_search_tree comparators)

add_executable(st_separate_chaining_hash_client st_separate_chaining_hash_client.c)
target_link_libraries(st_separate_chaining_hash_client PRIVATE st_separate_chaining_hash comparators hashers)

add_executable(st_sequential_search_client st_sequential_search_client.c)
target_link_libraries(st_sequential_search_client PRIVATE st_sequential_search comparators)
